# burlabet

./: .gitignore  README.md  main.py  pyproject.toml
burlabet/bot/: admin_commands.py  bot.py  constants.py  decorators.py  guest_commands.py  user_commands.py
burlabet/db/: db.py
burlabet/entities/: bet_box.py  booker.py  user.py
burlabet/scrapper/: constants.py
burlabet/scrapper/guest/: guest_feed.py
burlabet/scrapper/user/: user_feed.py
burlabet/utils/: io_utils.py  log.py  print_c.py
schemas/: burlabet.db
